still works if nio module is not open